crates/ars-components/src/navigation/breadcrumbs/snapshots/ars_components__navigation__breadcrumbs__tests__breadcrumbs_item.snap
---
source: crates/ars-components/src/navigation/breadcrumbs.rs
expression: snapshot_attrs(&api.item_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "breadcrumbs",
            ),
        ),
    ],
    styles: [],
}
