crates/ars-components/src/navigation/breadcrumbs/snapshots/ars_components__navigation__breadcrumbs__tests__breadcrumbs_link.snap
---
source: crates/ars-components/src/navigation/breadcrumbs.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "link",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "breadcrumbs",
            ),
        ),
        (
            Href,
            String(
                "/products",
            ),
        ),
    ],
    styles: [],
}
