crates/ars-components/src/navigation/breadcrumbs/snapshots/ars_components__navigation__breadcrumbs__tests__breadcrumbs_list.snap
---
source: crates/ars-components/src/navigation/breadcrumbs.rs
expression: snapshot_attrs(&api.list_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "list",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "breadcrumbs",
            ),
        ),
        (
            Role,
            String(
                "list",
            ),
        ),
    ],
    styles: [],
}
